<resources>
    <string name="Watch">Watch</string>
    <string name="Push">Push</string>
    <string name="Dzo">DZ0</string>
    <string name="Dz1">DZ1</string>
    <string name="swap">Swap</string>
    <string name="fizz">Fizz</string>
    <string name="buzz">Buzz</string>
    <string name="app_name">SkurkoAndroidPvt</string>
    <string name="dz2classwork">DZ2ClassWork</string>
    <string name="dz2">DZ2</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_your_username_password">
        <u>Forgot your username/password?</u>
    </string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="image">image</string>
    <string name="url_input">url_input</string>
    <string name="test_image">https://avatars.mds.yandex.net/get-pdb/467185/078a5008-00b6-4eed-a9ab-d36bae8ea903/s375
    </string>

    <string name="michael_scott">Michael Scott</string>
    <string name="trophies">TROPHIES</string>
    <string name="following">FOLLOWING</string>
    <string name="followers">FOLLOWERS</string>
    <string name="_50">50</string>
    <string name="name">NAME</string>
    <string name="phone_value">(781)202-0327</string>
    <string name="height_value">5\'9\"</string>
    <string name="gender_value">Male</string>
    <string name="birth_value">Mar. 15, 1965</string>
    <string name="postal_value">18512</string>
    <string name="country_value">USA</string>
    <string name="name_value">Michael Scott</string>
    <string name="phone">PHONE</string>
    <string name="height">HEIGHT</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="postal_code">POSTAL CODE</string>
    <string name="country">COUNTRY</string>
    <string name="gender">GENDER</string>
    <string name="url_sample">https://upload.wikimedia.org/wikipedia/en/d/dc/MichaelScott.png</string>
    <string name="dz3">DZ3</string>
    <string name="_3">3</string>
    <string name="_23">23</string>
    <string name="dz4">DZ4</string>


    <string name="student_s_avatar">Student\'s avatar</string>
    <string name="student_name">Student name</string>
    <string name="edit">Edit</string>
    <string name="delete">delete</string>
    <string name="url">URL</string>
    <string name="age">AGE</string>
    <string name="save">SAVE</string>
    <string name="dz6_error_empty">Fields should\'nt be empty</string>
    <string name="dz6_error_url">Input valid url</string>
    <string name="dz6_wrong_id">"No item to edit"</string>

    <string name="dz5_owl">DZ5 Owl</string>
    <string name="dz5_diagram">DZ5 Diagram</string>
    <string name="dz6">DZ6</string>
    <string name="dz8">DZ8</string>

    <string name="dz9">DZ9</string>
    <string name="title_activity_maps">Map</string>
    <string name="dz9_map_error">Failed to load cars</string>
    <string name="car_list">Car List</string>

    <string name="dz11_mvp">DZ11 MVP</string>
    <string name="dz11_mvvm">DZ11 MVVM</string>
    <string name="dz11_error">Input valid data</string>
    <string name="dz12">dz12</string>
    <string name="dz13">DZ13</string>
    <string name="dz13cars">DZ13CARS</string>

</resources>
