<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@color/dz3_black"
            android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <ImageView
                    android:id="@+id/bell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/ic_notifications_white_24dp"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="150dp"
                        android:layout_height="150dp"/>
                <TextView
                        android:id="@+id/avatar_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/michael_scott"
                        android:textColor="@color/white"
                        android:padding="20dp"
                        android:textSize="30sp"
                        android:gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/TrophiesAndFollowers"
                        android:id="@+id/trophies"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/trophies"/>
                <TextView
                        style="@style/TrophiesAndFollowers"
                        android:id="@+id/following"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/following"/>
                <TextView
                        style="@style/TrophiesAndFollowers"
                        android:id="@+id/followers"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/ProfileNumbers"
                        android:id="@+id/trophies_number"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/_3"/>
                <TextView
                        style="@style/ProfileNumbers"
                        android:id="@+id/following_number"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/_50"/>
                <TextView
                        style="@style/ProfileNumbers"
                        android:id="@+id/followers_number"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/_23"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/central_line"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/profile_grey"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                <TextView
                        style="@style/ProfileKeys"
                        android:id="@+id/name"
                        android:text="@string/name"/>
                <TextView
                        style="@style/ProfileKeys"
                        android:id="@+id/country"
                        android:text="@string/country"/>
                <TextView
                        style="@style/ProfileKeys"
                        android:id="@+id/postal"
                        android:text="@string/postal_code"/>
                <TextView
                        style="@style/ProfileKeys"
                        android:id="@+id/birthday"
                        android:text="@string/date_of_birth"/>
                <TextView
                        style="@style/ProfileKeys"
                        android:id="@+id/gender"
                        android:text="@string/gender"/>
                <TextView
                        style="@style/ProfileKeys"
                        android:id="@+id/height"
                        android:text="@string/height"/>
                <TextView
                        style="@style/ProfileKeys"
                        android:id="@+id/phone"
                        android:text="@string/phone"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                <TextView
                        style="@style/ProfileValues"
                        android:id="@+id/value"
                        android:text="@string/name_value"/>
                <TextView
                        style="@style/ProfileValues"
                        android:id="@+id/country_value"
                        android:text="@string/country_value"/>
                <TextView
                        style="@style/ProfileValues"
                        android:id="@+id/postal_value"
                        android:text="@string/postal_value"/>
                <TextView
                        style="@style/ProfileValues"
                        android:id="@+id/birth_value"
                        android:text="@string/birth_value"/>
                <TextView
                        style="@style/ProfileValues"
                        android:id="@+id/gender_value"
                        android:text="@string/gender_value"/>
                <TextView
                        style="@style/ProfileValues"
                        android:id="@+id/height_value"
                        android:text="@string/height_value"/>
                <TextView
                        style="@style/ProfileValues"
                        android:id="@+id/phone_value"
                        android:text="@string/phone_value"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>