<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_logo" />

    <EditText
        android:id="@+id/editUsername"
        style="@style/LoginEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_login_name"
        android:drawablePadding="10dp"
        android:fontFamily="@font/monda_regular"
        android:hint="@string/Username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editPassword"
        style="@style/LoginEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/ic_login_password"
        android:drawablePadding="10dp"
        android:fontFamily="@font/monda_regular"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/log_in"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/forgot_login"
        android:fontFamily="@font/monda_regular"
        android:text="@string/forgot_your_username_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/createAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:background="@color/create_acc"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />
</LinearLayout>