<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="20dp"
              android:background="@color/dz3_black">

    <ImageView
            android:id="@+id/dz8DetailImage"
            android:contentDescription="@string/student_s_avatar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"/>

    <TextView
            android:id="@+id/dz8DetailName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:textSize="40sp"
            tools:text="poqewwpoqwe"/>

    <TextView
            android:id="@+id/dz8DetailAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:textSize="40sp"
            tools:text="poqewwpoqwe"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/dz8DetailEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textSize="40sp"
                android:text="@string/edit"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:layout_weight="1"/>

        <Button
                android:id="@+id/dz8DetailDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textSize="40sp"
                android:text="@string/delete"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>